Ensured you can Register the Custom Parameter once in stead of each entity Spawn (#71)
## Description
You will now register the Parameters with the entity

## Changes
- **Change 1**: ReloadHandler

## How has this been tested?
* join a world
* spawn an entity
* get the parameter values
* check if they are the same as the jsons

## Type of Change
- [x] Bug fix
- [x] New feature
- [ ] Documentation update

## Checklist
- [x] My code follows the style guidelines of this project.
[Contributing](https://github.com/MeAlam1/BlueLib/blob/1.21/CONTRIBUTING.md)
- [x] I have performed a self-review of my own code.
- [x] I have commented my code following the guidelines.
[Contributing](https://github.com/MeAlam1/BlueLib/blob/1.21/CONTRIBUTING.md)
- [x] My changes generate no new warnings.

## Related Issues
<!-- List any issues that this PR is related to or closes. -->